[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphit-base"
dynamic = ["version"]
authors = [{name = "graphit.ai", email = "security@graphit.ai"}]
description = "GraphIt provides a means to run a pipeline of flexible AI processing components in a flexible means to achieve a processing pipeline."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pulsar-client",
    "prometheus-client",
    "requests",
    "python-logging-loki",
    "pika",
    "confluent-kafka",
    "pyyaml",
    "websockets",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/graphit-ai/graphit"

[project.scripts]
processor-group = "graphit.base.processor_group:run"

[tool.setuptools.packages.find]
include = ["graphit*"]

[tool.setuptools.package-data]
"graphit.i18n.packs" = ["*.json"]

[tool.setuptools.dynamic]
version = {attr = "graphit.base_version.__version__"}
