[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphit-vertexai"
dynamic = ["version"]
authors = [{name = "graphit.ai", email = "security@graphit.ai"}]
description = "GraphIt provides a means to run a pipeline of flexible AI processing components in a flexible means to achieve a processing pipeline."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "graphit-base>=2.5,<2.6",
    "pulsar-client",
    "google-genai",
    "google-api-core",
    "prometheus-client",
    "anthropic",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/graphit-ai/graphit"

[project.scripts]
text-completion-googleaistudio = "graphit.model.text_completion.googleaistudio:run"
text-completion-vertexai = "graphit.model.text_completion.vertexai:run"

[tool.setuptools.packages.find]
include = ["graphit*"]

[tool.setuptools.dynamic]
version = {attr = "graphit.vertexai_version.__version__"}